fix: modal cause row gap betweenn quickactions and main to increase

--- a/src/Components/Modal/Modal.style.scss
+++ b/src/Components/Modal/Modal.style.scss
@@ -1,7 +1,4 @@
-@import "../../Assets/Styles/functions";
-@import "../../Assets/Styles/mixins";
-@import "../../Assets/Styles/themes";
-
 #modal {
-    z-index: 10;
+  z-index: 10;
+  order: 3;
 }
